fix mypage height, dont scroll page that doesn't overflows

--- a/client/src/Components/scss/intro.scss
+++ b/client/src/Components/scss/intro.scss
@@ -1,6 +1,7 @@
 .bg, .bg > * {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  height: -webkit-fill-available;
 }
 
 @keyframes intro-bg-show {
