--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,9 +26,14 @@ html {
   box-sizing: border-box;
   font-size: 15px;
 }
-html, body, #root {
+html {
   width: 100%;
   height: 100%;
+}
+
+body, #root {
+  width: 100%;
+  max-height: 100%;
 }
 
 button {
